# curve_parser

./: .pre-commit-config.yaml  README.md  graph_reader copy.ipynb  graph_reader.ipynb  pyproject.toml
data/: graph1.csv  graph2.csv  total.csv
src/: utils.py
