[tool.poetry]
name = "curve-parser"
version = "0.1.0"
description = "Python parser for curves to points graphs"
authors = ["Kuznetsov Gleb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
Pillow = "^10.1.0"
notebook = "^7.0.6"
plotly = "^5.18.0"
seaborn = "^0.13.0"


[tool.poetry.group.lint.dependencies]
pre-commit-hooks = "^4.5.0"
ruff = "^0.1.8"
isort = "^5.13.1"
black = "^23.12.0"
autoflake = "^2.2.1"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
